@@ -2,6 +2,9 @@
 	- Change socket type to SOCKET and set appropriately for platform.
 	- Modernize portable.[ch], change DLP_WIN32 to DLP_WIN and DLP_GLIBC2
 	to DLP_WIN and re-oragnize includes.
+	- Change host name resolution to use getaddrinfo() on all platforms
+	except Windows.  Support is now nearly ubiquitous.  Still limited to
+	IPv4 addresses.
 
 2013.210: 1.6
 	- dl_position(): return 0 when packet was not found.  Differentiates
